feat(BUX-594): re-generate swagger
