# docs/swagger.yaml
@@ -1,65 +1,87 @@
 definitions:
-  access.SignInResponse:
+  buxmodels.Transaction:
+    properties:
+      block_hash:
+        description: BlockHash is a block hash that transaction is in.
+        type: string
+      block_height:
+        description: BlockHeight is a block height that transaction is in.
+        type: integer
+      created_at:
+        description: CreatedAt is a time when outer model was created.
+        type: string
+      deleted_at:
+        description: DeletedAt is a time when outer model was deleted.
+        type: string
+      direction:
+        description: TransactionDirection is a transaction direction (inbound/outbound).
+        type: string
+      draft_id:
+        description: DraftID is a transaction related draft id.
+        type: string
+      fee:
+        description: Fee is a transaction fee.
+        type: integer
+      hex:
+        description: Hex is a transaction hex.
+        type: string
+      id:
+        description: ID is a transaction id.
+        type: string
+      metadata:
+        additionalProperties: true
+        description: Metadata is a metadata map of outer model.
+        type: object
+      number_of_inputs:
+        description: NumberOfInputs is a number of transaction inputs.
+        type: integer
+      number_of_outputs:
+        description: NumberOfOutputs is a number of transaction outputs.
+        type: integer
+      output_value:
+        description: OutputValue is a total output value.
+        type: integer
+      outputs:
+        additionalProperties:
+          type: integer
+        description: Outputs represents all bux-transaction outputs. Will be shown
+          only for admin.
+        type: object
+      status:
+        description: Status is a transaction status.
+        type: string
+      total_value:
+        description: TotalValue is a total input value.
+        type: integer
+      updated_at:
+        description: UpdatedAt is a time when outer model was updated.
+        type: string
+      xpub_in_ids:
+        description: XpubInIDs is a slice of xpub input ids.
+        items:
+          type: string
+        type: array
+      xpub_out_ids:
+        description: XpubOutIDs is a slice of xpub output ids.
+        items:
+          type: string
+        type: array
+    type: object
+  transports_http_endpoints_api_access.SignInResponse:
     properties:
       balance:
-        $ref: '#/definitions/users.Balance'
+        $ref: '#/definitions/web-backend_domain_users.Balance'
       paymail:
         type: string
     type: object
-  access.SignInUser:
+  transports_http_endpoints_api_access.SignInUser:
     properties:
       email:
         type: string
       password:
         type: string
     type: object
-  buxclient.FullTransaction:
-    properties:
-      blockHash:
-        type: string
-      blockHeight:
-        type: integer
-      createdAt:
-        type: string
-      direction:
-        type: string
-      fee:
-        type: integer
-      id:
-        type: string
-      numberOfInputs:
-        type: integer
-      numberOfOutputs:
-        type: integer
-      receiver:
-        type: string
-      sender:
-        type: string
-      status:
-        type: string
-      totalValue:
-        type: integer
-    type: object
-  buxclient.Transaction:
-    properties:
-      createdAt:
-        type: string
-      direction:
-        type: string
-      fee:
-        type: integer
-      id:
-        type: string
-      receiver:
-        type: string
-      sender:
-        type: string
-      status:
-        type: string
-      totalValue:
-        type: integer
-    type: object
-  transactions.CreateTransaction:
+  transports_http_endpoints_api_transactions.CreateTransaction:
     properties:
       password:
         type: string
@@ -68,23 +90,14 @@ definitions:
       satoshis:
         type: integer
     type: object
-  users.Balance:
-    properties:
-      bsv:
-        type: number
-      satoshis:
-        type: integer
-      usd:
-        type: number
-    type: object
-  users.RegisterResponse:
+  transports_http_endpoints_api_users.RegisterResponse:
     properties:
       mnemonic:
         type: string
       paymail:
         type: string
     type: object
-  users.RegisterUser:
+  transports_http_endpoints_api_users.RegisterUser:
     properties:
       email:
         type: string
@@ -93,10 +106,10 @@ definitions:
       passwordConfirmation:
         type: string
     type: object
-  users.UserResponse:
+  transports_http_endpoints_api_users.UserResponse:
     properties:
       balance:
-        $ref: '#/definitions/users.Balance'
+        $ref: '#/definitions/web-backend_domain_users.Balance'
       email:
         type: string
       paymail:
@@ -104,10 +117,19 @@ definitions:
       userId:
         type: integer
     type: object
+  web-backend_domain_users.Balance:
+    properties:
+      bsv:
+        type: number
+      satoshis:
+        type: integer
+      usd:
+        type: number
+    type: object
 info:
   contact: {}
-  description: This is an API for bux wallet.
-  title: Bux Wallet API
+  description: This is an API for the spv-wallet-web-frontend.
+  title: SPV Wallet web-backend
   version: "1.0"
 paths:
   /api/v1/sign-in:
@@ -120,14 +142,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/access.SignInUser'
+          $ref: '#/definitions/transports_http_endpoints_api_access.SignInUser'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/access.SignInResponse'
+            $ref: '#/definitions/transports_http_endpoints_api_access.SignInResponse'
       summary: Sign in user
       tags:
       - user
@@ -152,7 +174,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/buxclient.Transaction'
+              $ref: '#/definitions/buxmodels.Transaction'
             type: array
       summary: Get all transactions.
       tags:
@@ -164,14 +186,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/transactions.CreateTransaction'
+          $ref: '#/definitions/transports_http_endpoints_api_transactions.CreateTransaction'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/buxclient.FullTransaction'
+            $ref: '#/definitions/buxmodels.Transaction'
       summary: Create transaction.
       tags:
       - transaction
@@ -189,7 +211,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/buxclient.FullTransaction'
+            $ref: '#/definitions/buxmodels.Transaction'
       summary: Get transaction by id.
       tags:
       - transaction
@@ -205,14 +227,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/users.RegisterUser'
+          $ref: '#/definitions/transports_http_endpoints_api_users.RegisterUser'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/users.RegisterResponse'
+            $ref: '#/definitions/transports_http_endpoints_api_users.RegisterResponse'
       summary: Register new user
       tags:
       - user
@@ -238,7 +260,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/users.UserResponse'
+            $ref: '#/definitions/transports_http_endpoints_api_users.UserResponse'
       summary: Get user information
       tags:
       - user
